--- a/sensora-ui/package.json
+++ b/sensora-ui/package.json
@@ -25,6 +25,7 @@
     "lucide-vue-next": "^0.469.0",
     "pinia": "^2.3.0",
     "radix-vue": "^1.9.12",
+    "sit-onyx": "1.0.0-beta.109",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
