--- a/sensora-ui/package.json
+++ b/sensora-ui/package.json
@@ -55,6 +55,7 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "oxlint": "^0.11.0",
+    "postcss-prefix-selector": "^2.1.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
