--- a/sensora-ui/package.json
+++ b/sensora-ui/package.json
@@ -48,6 +48,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
     "eslint-plugin-oxlint": "^0.11.0",
     "eslint-plugin-playwright": "^2.1.0",
@@ -57,6 +58,7 @@
     "oxlint": "^0.11.0",
     "postcss-prefix-selector": "^2.1.0",
     "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
