--- a/sensora-ui/tsconfig.app.json
+++ b/sensora-ui/tsconfig.app.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": true, // nicht benutze Sachen
+    "noUnusedParameters": true, // nicht benutze Sachen
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
@@ -15,5 +15,8 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "src/**/*.css",
+    "./global.d.ts",
+    "./env.d.ts"
   ]
 }
