--- a/sensora-ui/package.json
+++ b/sensora-ui/package.json
@@ -20,8 +20,10 @@
     "@capacitor/android": "^6.2.0",
     "@capacitor/cli": "^6.2.0",
     "@capacitor/core": "^6.2.0",
+    "@radix-icons/vue": "^1.0.0",
     "@unovis/ts": "^1.5.0",
     "@unovis/vue": "^1.5.0",
+    "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^12.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,9 +35,13 @@
     "sit-onyx": "1.0.0-beta.109",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.2.0",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-sonner": "^1.3.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
