--- a/sensora-ui/package.json
+++ b/sensora-ui/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.469.0",
     "lucide-vue-next": "^0.469.0",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "radix-vue": "^1.9.12",
     "sit-onyx": "1.0.0-beta.109",
     "tailwind-merge": "^2.6.0",
