--- a/sensora-ui/tsconfig.app.json
+++ b/sensora-ui/tsconfig.app.json
@@ -3,13 +3,17 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "strict": true,
-    "noUnusedLocals": true, // nicht benutze Sachen
-    "noUnusedParameters": true, // nicht benutze Sachen
+    "noUnusedLocals": false,
+    // nicht benutze Sachen
+    "noUnusedParameters": false,
+    // nicht benutze Sachen
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "@/*": ["./src/*"]
-    },
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts",
