--- a/sensora-ui/package.json
+++ b/sensora-ui/package.json
@@ -72,6 +72,7 @@
     "prettier": "^3.3.3",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
+    "three": "^0.172.0",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
