--- a/sensora-ui/tsconfig.app.json
+++ b/sensora-ui/tsconfig.app.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "strict": true,
+    "noImplicitAny": false,
     "noUnusedLocals": false,
     // nicht benutze Sachen
     "noUnusedParameters": false,
