--- a/sensora-ui/package.json
+++ b/sensora-ui/package.json
@@ -21,6 +21,7 @@
     "@capacitor/cli": "^6.2.0",
     "@capacitor/core": "^6.2.0",
     "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-table": "^8.21.2",
     "@unovis/ts": "^1.5.0",
     "@unovis/vue": "^1.5.0",
     "@vee-validate/zod": "^4.15.0",
@@ -30,11 +31,11 @@
     "clsx": "^2.1.1",
     "flag-icon-css": "^4.1.7",
     "install": "^0.13.0",
-    "lucide-react": "^0.469.0",
     "lucide-vue-next": "^0.469.0",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "radix-vue": "^1.9.12",
+    "reka-ui": "^2.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul-vue": "^0.2.0",
