add local backend dev setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,10 @@ FROM rust:latest as builder
 WORKDIR /app
 ARG GIT_TOKEN
 ENV GIT_TOKEN=${GIT_TOKEN}
-RUN git clone https://$GIT_TOKEN@gitlab.maxtar.de/sensora/frontend-api.git .
+RUN git clone https://oauth2:$GIT_TOKEN@gitlab.maxtar.de/sensora/frontend-api.git .
 RUN cargo build --release
 
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
 RUN apt-get update && apt-get install -y \
   libssl-dev \
@@ -16,5 +16,8 @@ RUN mkdir -p /usr/local/bin
 
 COPY --from=builder /app/target/release/Sensora /usr/local/bin/Sensora
 
-WORKDIR /app
+WORKDIR /usr/local/bin/
+
+EXPOSE 8080
+
 CMD ["/usr/local/bin/Sensora"]
