--- a/dev-setup/docker-compose.yml
+++ b/dev-setup/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - "8080:8080"
     depends_on:
       - db
+    environment:
+      DATABASE_URL: postgres://postgres:mysecretpassword@db:5432/sensora
 
   db:
     image: postgres:13
