--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@capacitor/android": "^6.2.0",
-    "@capacitor/cli": "^6.2.0",
-    "@capacitor/core": "^6.2.0",
+    "@capacitor/android": "^7.0.1",
+    "@capacitor/core": "^7.0.1",
+    "@capacitor/ios": "^7.0.1",
+    "@capacitor/splash-screen": "^7.0.0",
     "@radix-icons/vue": "^1.0.0",
     "@tanstack/vue-table": "^8.21.2",
     "@unovis/ts": "^1.5.0",
@@ -47,6 +48,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^7.0.1",
     "@playwright/test": "^1.49.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/express": "^5.0.0",
