--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,10 @@
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "radix-vue": "^1.9.12",
-    "reka-ui": "^2.0.0",
+    "reka-ui": "^2.0.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul-vue": "^0.2.0",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
