--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,12 +33,12 @@
     "clsx": "^2.1.1",
     "flag-icon-css": "^4.1.7",
     "install": "^0.13.0",
-    "lucide-vue-next": "^0.469.0",
+    "lucide-vue-next": "^0.487.0",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "radix-vue": "^1.9.12",
-    "reka-ui": "^2.0.2",
-    "tailwind-merge": "^2.6.0",
+    "reka-ui": "^2.2.0",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul-vue": "^0.2.0",
@@ -53,6 +53,7 @@
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.0.1",
     "@playwright/test": "^1.49.1",
+    "@tailwindcss/postcss": "^4.1.3",
     "@tsconfig/node22": "^22.0.0",
     "@types/express": "^5.0.0",
     "@types/jsdom": "^21.1.7",
@@ -77,7 +78,7 @@
     "postcss-prefix-selector": "^2.1.0",
     "prettier": "^3.3.3",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.3",
     "three": "^0.172.0",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
