--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,2 @@
-VITE_API_BASE=http://localhost:8080/v1
-VITE_PLANT_AI_BASE=http://localhost:8000
+VITE_API_BASE=https://staging.maxtar.de/v1
+VITE_PLANT_AI_BASE=https://api.ase.juqsi.de
