--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,11 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    location /.well-known/ {
+        allow all;
+        default_type application/json;
+    }
+
     location / {
         try_files $uri /index.html;
     }
