--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@capacitor/android": "^7.0.1",
     "@capacitor/app": "^7.0.0",
+    "@capacitor/camera": "^7.0.1",
     "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
     "@capacitor/splash-screen": "^7.0.0",
@@ -83,6 +84,7 @@
     "three": "^0.172.0",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
+    "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-vue-devtools": "^7.6.8",
     "vitest": "^2.1.8",
     "vue-i18n-extract": "^2.0.7",
