add camera request

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,7 +5,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    location /.well-known/ {
+    location ^~ /.well-known/ {
+        try_files $uri =404;
+        error_page 404 =404;
         allow all;
         default_type application/json;
     }
