Refactor auth-service and related components
- Updated requirements.txt to include Flasgger for API documentation.
- Modified test_admin.py to make username optional in register_controller function.
- Changed AUTH_SERVICE_URL in test_controller.py to use the production URL.
- Removed test_db.py and test_setpoints.py as they are no longer needed.
- Updated auth_config.json to include new controller credentials.
- Changed Dockerfile for databasewriter and mailservice to use Python 3.12.
- Updated docker-compose.yml to improve service configurations and environment variables.
- Removed dummy_data.py as it is no longer required.
- Updated env_struct to reflect new database and SMTP credentials.
- Enhanced mailservice app.py to include a preshared key for verification.
- Updated setpointapi to include Swagger documentation and improved endpoint handling.
- Modified solace-init Dockerfile and queues.json for better queue management.

--- a/sensora service/.env
+++ b/sensora service/.env
@@ -2,7 +2,7 @@
 DB_NAME=sensora
 DB_USER=postgres
 DB_PASS=postgres
-DB_HOST=host.docker.internal #192.168.0.100
+DB_HOST=host.docker.internal
 DB_PORT=5432
 
 # SMTP (E-Mail-Versand)
@@ -11,7 +11,11 @@ SMTP_PASS=lbvy fkey orwp solk
 
 # Mailservice
 DATABASE_URL=postgresql://postgres:postgres@host.docker.internal/sensora
-SERVER_HOST=http://192.168.16.137:8000 # live dann-> https://fynnsmailservice.maxtar.de
+SERVER_HOST=https://fynnsmailservice.maxtar.de
+MAILSERVICE_PSK=your-secure-preshared-key
+
+# SetpointAPI
+SERVER_HOST=https://fynnsetpointapi.maxtar.de
 
 # Solace
 SOLACE_HOST=tcp://solace:55555
@@ -23,6 +27,9 @@ SOLACE_ADMIN_USER=admin
 SOLACE_ADMIN_PASS=adminpasswort
 ADMIN_KEY=your-secure-admin-key
 TOKEN_SECRET=your-secret-key-min-32-bytes-long!!
-SOLACE_PUBLIC_URL=solace
+SOLACE_PUBLIC_URL=maxtar.de
 SOLACE_PUBLIC_PORT=1883
 SOLACE_USE_SSL=false
+
+# Auth-Service
+SERVER_HOST=https://fynnauthservice.maxtar.de
