--- a/sensora service/auth-service/Dockerfile
+++ b/sensora service/auth-service/Dockerfile
@@ -1,13 +1,12 @@
-FROM python:3.11-slim
+FROM python:3.12
 
 WORKDIR /app
 
-COPY requirements.txt .
+# Copy application files
+COPY . /app
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
-
-# Create config directory
-RUN mkdir -p /config
-
-CMD ["python", "app.py"] 
+# Use gunicorn for production
+CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
