--- a/sensora service/databasewriter/Dockerfile
+++ b/sensora service/databasewriter/Dockerfile
@@ -1,18 +1,11 @@
-# Basis-Image
-FROM python:3.11-slim
+FROM python:3.12-slim
 
-# Arbeitsverzeichnis im Container
 WORKDIR /app
 
-# Abhängigkeiten kopieren und installieren
-COPY requirements.txt .
+# Copy application files
+COPY . /app
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Restlichen Code kopieren
-COPY . .
-
-# Kein EXPOSE nötig, da dieser Service passiv lauscht (optional für Doku)
-EXPOSE 55555
-
-# Startbefehl
 CMD ["python", "writer.py"]
