--- a/sensora service/auth-service/requirements.txt
+++ b/sensora service/auth-service/requirements.txt
@@ -3,4 +3,5 @@ requests==2.31.0
 python-dotenv==1.0.0
 cryptography==42.0.5
 paho-mqtt==1.6.1
-psycopg2-binary==2.9.9 
+psycopg2-binary==2.9.9
+flasgger
