--- a/sensora service/mailservice/Dockerfile
+++ b/sensora service/mailservice/Dockerfile
@@ -1,18 +1,15 @@
 # Basis-Image
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 # Arbeitsverzeichnis im Container
 WORKDIR /app
 
 # Abhängigkeiten kopieren und installieren
-COPY requirements.txt .
+COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Restlichen Code kopieren
-COPY . .
-
-# Exponiere den Port (wichtig für Compose)
-EXPOSE 8000
+COPY . /app
 
 # Startbefehl
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
