--- a/sensora service/setpointapi/Dockerfile
+++ b/sensora service/setpointapi/Dockerfile
@@ -1,18 +1,11 @@
-# Basis-Image
-FROM python:3.11-slim
+FROM python:3.12-slim
 
-# Arbeitsverzeichnis im Container
 WORKDIR /app
 
-# Abhängigkeiten kopieren und installieren
-COPY requirements.txt .
+# Copy application files
+COPY . /app
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Restlichen Code kopieren
-COPY . .
-
-# Port freigeben
-EXPOSE 5000
-
-# Startbefehl
 CMD ["python", "setpoint_rest_api.py"]
