feat: finished implementation of watering logic

--- a/iot/CMakeLists.txt
+++ b/iot/CMakeLists.txt
@@ -7,4 +7,5 @@ set(CMAKE_FIND_ROOT_PATH "C:/Users/lukas/Espressif/tools/xtensa-esp-elf/esp-14.2
 set(CMAKE_C_COMPILER "C:/Users/lukas/Espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc.exe")
 set(CMAKE_CXX_COMPILER "C:/Users/lukas/Espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++.exe")
 set(CMAKE_ASM_COMPILER "C:/Users/lukas/Espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc.exe")
+set(EXTRA_COMPONENT_DIRS components/esp-idf-lib/components)
 project(app-template)
