--- a/iot/main/CMakeLists.txt
+++ b/iot/main/CMakeLists.txt
@@ -2,7 +2,7 @@
 # for more information about component CMakeLists.txt files.
 
 idf_component_register(
-    SRCS main.c wifi_manager.c led_control.c solace_manager.c sensor_manager.c auth_service.c     # list the source files of this component
+    SRCS main.c wifi_manager.c led_control.c solace_manager.c sensor_manager.c auth_service.c pump_manager.c    # list the source files of this component
     INCLUDE_DIRS .        # optional, add here public include directories
     PRIV_INCLUDE_DIRS   # optional, add here private include directories
     REQUIRES            # optional, list the public requirements (component names)
